...
    "signup.handle.title": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Choose your handle"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Elige tu usuario"
          }
        },
        "pt": {
          "stringUnit": {
            "state": "translated",
            "value": "Escolha seu nome de usuário"
...
